# Shadow

./: .gitignore  .gitmodules  premake5.lua
application/: CMakeLists.txt  gen_prj_ios.sh
application/android/app/: build.gradle  proguard-rules.pro
application/android/gradle/wrapper/: gradle-wrapper.properties
application/project/android/app/: build.gradle
application/project/ios/: gen_prj_xcode_ios.sh
application/project/macos/: gen_prj_xcode_mac.sh
application/project/windows/: gen_prj_vs2017.bat
application/source/: App.cpp  App.h
application/source/platform/android/: ShadowJNI.cpp
application/source/platform/ios/: AppDelegate.m  AppDelegate.mm  CMakeLists.txt  Info.plist  (+5 more)
editor/: CMakeLists.txt  gen_prj_vs2017.bat  gen_prj_xcode.sh  premake5.lua
editor/data/gui/: editor_style.xml
editor/source/: GameModuleLauncher.cpp  GameModuleLauncher.h  MainWindow.cpp  MainWindow.h  Picker.cpp  Picker.h  SceneWindow.cpp  SceneWindow.h  main.cpp
editor/source/gizmo/: Gizmo.cpp  Gizmo.h  MoveGizmo.cpp  MoveGizmo.h  RotateGizmo.cpp  RotateGizmo.h  ScaleGizmo.cpp  ScaleGizmo.h
editor/source/gui/: AssetsWidget.cpp  AssetsWidget.h  ColorPicker.cpp  ColorPicker.h  ExpandableWidget.cpp  ExpandableWidget.h  GraphicsWidget.cpp  GraphicsWidget.h  HierarchyWidget.cpp  HierarchyWidget.h  InspectorWidget.cpp  InspectorWidget.h  MaterialWidget.cpp  MaterialWidget.h  ParamEdit.h  TransformWidget.cpp  TransformWidget.h  TreeWidget.cpp  TreeWidget.h  Vector2LineEdit.cpp  Vector2LineEdit.h  Vector3LineEdit.cpp  Vector3LineEdit.h  Vector4LineEdit.cpp  Vector4LineEdit.h
editor/source/selection/: SelectionManager.cpp  SelectionManager.h
engine/: CMakeLists.txt  CMakeListsLatest.txt  CMakeListsNew.txt  CMakeListsOld.txt  CMakeListsTemplate.txt  gen_project_VS2013.bat  premake5.lua
engine/data/: CMakeLists_template.txt
engine/data/shaders/: VertexColor3D.rt  default.rt  text_base.rt  ui_base.rt  ui_base_debug.rt
engine/source/: Application.cpp  Application.h  CommonTypes.h  CompileConfig.h  CreationParameters.h  Device.cpp  Device.h  DynamicLibrary.cpp  DynamicLibrary.h  Event.h  Forward.h  Globals.h  InputManager.cpp  InputManager.h  Object.h  Shadow.cpp  Shadow.h  Singleton.h  System.cpp  System.h  Types.h  Variant.cpp  Variant.h  main.cpp  pempek_assert.cpp  pempek_assert.h
engine/source/common/: Forward.h  Prerequisities.h
engine/source/device/: Application.cpp  Application.h  CreationParameters.h  Device.cpp  Device.h
engine/source/entity/: Component.cpp  Component.h  ComponentTypeManager.h  ComponentsFactory.cpp  ComponentsFactory.h  Entity.cpp  Entity.h  System.cpp  System.h
engine/source/font/: Font.cpp  Font.h  FontManager.cpp  FontManager.h
engine/source/gui/: Button.cpp  Button.h  ButtonGroup.cpp  ButtonGroup.h  ComboBox.cpp  ComboBox.h  FloatLineEdit.cpp  FloatLineEdit.h  GuiBatch.h  GuiElement.cpp  GuiElement.h  GuiManager.cpp  GuiManager.h  HorizontalLayout.cpp  HorizontalLayout.h  ImageWidget.cpp  ImageWidget.h  IntLineEdit.cpp  IntLineEdit.h  Label.cpp  Label.h  Layout.cpp  Layout.h  LineEdit.cpp  LineEdit.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  ScrollWidget.cpp  ScrollWidget.h  SliderWidget.cpp  SliderWidget.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h  SpriteWidget.cpp  SpriteWidget.h  Style.cpp  (+13 more)
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/io/: File.cpp  File.h  FileSystem.cpp  FileSystem.h
engine/source/jobs/: Job.h  JobQueue.cpp  JobQueue.h  JobScheduler.cpp  JobScheduler.h  Test.cpp  Test.h  Threads.h  Timer.h  Worker.cpp  Worker.h
engine/source/math/: AABB.cpp  AABB.h  Constants.h  FunctionsCommon.h  FunctionsRayIntersect.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h  Vector2.cpp  Vector2.h  Vector2Int.cpp  Vector2Int.h  Vector3.cpp  Vector3.h  Vector3Int.cpp  Vector3Int.h  Vector4.cpp  Vector4.h  Vector4Int.cpp  Vector4Int.h  math.h  smath.h
engine/source/newGui/: Button.h
engine/source/platform/: Main.h  Win32Device.cpp  Win32Device.h
engine/source/prerequisities/: PlatformDefines.h  Prerequisities.h
engine/source/render/: Material.cpp  Material.h  MaterialParam.cpp  MaterialParam.h  MaterialParams.cpp  MaterialParams.h
engine/source/resources/: Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
engine/source/scene/: Camera.cpp  Camera.h  GeometryGenerator.cpp  GeometryGenerator.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  MeshBase.cpp  MeshBase.h  Model.cpp  Model.h  ModelBase.cpp  ModelBase.h  Node.h  Picker.cpp  Picker.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
engine/source/scripting/: Script.h
engine/source/serialization/: ObjectFactory.cpp  ObjectFactory.h  Property.cpp  Property.h  Serializable.cpp  Serializable.h  Serializer.cpp  Serializer.h  XMLSerializer.cpp  XMLSerializer.h
engine/source/utility/: DynamicLibrary.cpp  DynamicLibrary.h  Event.h  Object.h  Singleton.h  Variant.cpp
engine/source/video/: BlendingState.cpp  BlendingState.h  Color.h  Command.h  CommandBuffer.cpp  CommandBuffer.h  CommandContext.h  CommandPool.cpp  CommandPool.h  Common.h  CommonTypes.h  DepthStencilState.cpp  DepthStencilState.h  Driver.cpp  Driver.h  GpuParam.h  GpuParamDescription.h  GpuParams.cpp  GpuParams.h  GpuParamsBlock.h  GpuParamsDescription.h  GpuPipelineParamsInfo.cpp  GpuPipelineParamsInfo.h  GraphicsPipeline.h  HardwareBuffer.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  MaterialParam.cpp  MaterialParam.h  MaterialParams.cpp  MaterialParams.h  Painter.cpp  Painter.h  RasterizationState.cpp  RasterizationState.h  RenderBatch.cpp  (+39 more)
framework/: CMakeLists.txt  gen_prj_vs2013.bat  gen_prj_vs2015.bat  gen_project_VS2015.bat  premake5.lua
framework/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
framework/source/: TestApplication.cpp  TestApplication.h  main.cpp
libs/freetype/: CMakeLists.txt  premake5.lua
projects/TestProject/source/: CMakeLists.txt  Connection.cpp  Connection.h  Game.cpp  Game.h  main.cpp
(+746 files in other folders)
